<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="NoAppsSelected">No Apps Selected. Please select apps first.</string>
    <string name="PermissionDenied">Permission denied</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_popup_copylink">Copy Link</string>
    <string name="action_popup_copylink_success">Link Copied Successfully</string>
    <string name="action_popup_launch">Launch</string>
    <string name="action_popup_savetosdcard">Save To SD Card</string>
    <string name="action_popup_savetosdcardsuccess">Saved successfully $1</string>
    <string name="action_popup_searchingoogleplay">Search In Play Store</string>
    <string name="action_popup_selectall">Select all</string>
    <string name="action_popup_sharelink">Share Link</string>
    <string name="action_popup_unselectall">Unselect all</string>
    <string name="app_name">Apk Share</string>
    <string name="apps">Apps</string>
    <string name="com.crashlytics.android.build_id">0eb918d6-7dc1-4371-94e7-76e3cb0b92a7</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="default_web_client_id">691120336733-d2q7vigsenorr1m2jls9tvdggqt8lgkq.apps.googleusercontent.com</string>
    <string name="firebase_database_url">https://apk-share-3e729.firebaseio.com</string>
    <string name="follow">Follow</string>
    <string name="gcm_defaultSenderId">691120336733</string>
    <string name="google_api_key">AIzaSyDEs5enPy9PFqa1AdyLa1SfGytA7uIBuwU</string>
    <string name="google_app_id">1:691120336733:android:d610abea11566aa8</string>
    <string name="google_crash_reporting_api_key">AIzaSyDEs5enPy9PFqa1AdyLa1SfGytA7uIBuwU</string>
    <string name="google_storage_bucket">apk-share-3e729.appspot.com</string>
    <string name="lbl_installedon">Installed On:</string>
    <string name="lbl_version">Version:</string>
    <string name="lblsearch">search...</string>
    <string name="lblshowsysapp">Show System Apps</string>
    <string name="msg_loading">Loading...</string>
    <string name="permissions">Permissions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="rate">Vote</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="sendbutton">Send/Share</string>
    <string name="sizelabel">Size</string>
    <string name="sizelabel2">Size:</string>
    <string name="sortby">Sort By</string>
    <string name="sortbydate">Install Date</string>
    <string name="sortbyname">Name</string>
    <string name="sortbysize">Size</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
