<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="1" android:background="@null" android:layout_width="-1" android:layout_height="-1"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/infotoolbar" layout="@layout/infotoolbar" />
    <LinearLayout android:orientation="1" android:id="@id/addinfopanel" android:layout_width="-1" android:layout_height="-1">
        <RelativeLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2" android:layout_margin="10.0dip">
            <ImageView android:id="@id/img_app_icon" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
            <TextView android:textSize="25.0sp" android:textColor="@null" android:id="@id/lbl_app_name" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="5.0dip" android:text="test" android:layout_toRightOf="@id/img_app_icon" android:layout_centerVertical="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2" android:layout_margin="10.0dip">
            <View android:background="@color/ColorPrimary" android:layout_width="1.0dip" android:layout_height="-1" android:layout_margin="2.0dip" />
            <LinearLayout android:orientation="1" android:layout_width="-1" android:layout_height="-2">
                <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="10.0dip">
                    <TextView android:textSize="17.0sp" android:textColor="@null" android:layout_width="-2" android:layout_height="-2" android:text="@string/lbl_version" />
                    <TextView android:textSize="17.0sp" android:textColor="#ffbebebe" android:id="@id/lbl_version" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="5.0dip" />
                </LinearLayout>
                <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="10.0dip">
                    <TextView android:textSize="17.0sp" android:textColor="@null" android:layout_width="-2" android:layout_height="-2" android:text="@string/lbl_installedon" />
                    <TextView android:textSize="17.0sp" android:textColor="#ffbebebe" android:id="@id/lbl_installedon" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="5.0dip" />
                </LinearLayout>
                <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="10.0dip">
                    <TextView android:textSize="17.0sp" android:textColor="@null" android:layout_width="-2" android:layout_height="-2" android:text="@string/sizelabel2" />
                    <TextView android:textSize="17.0sp" android:textColor="#ffbebebe" android:id="@id/lbl_size" android:layout_width="-2" android:layout_height="-2" android:layout_marginLeft="5.0dip" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip">
            <TextView android:textSize="20.0sp" android:textColor="@null" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="15.0dip" android:text="@string/permissions" />
        </LinearLayout>
        <LinearLayout android:orientation="0" android:layout_width="-1" android:layout_height="-2" android:layout_margin="10.0dip">
            <View android:background="@color/ColorPrimary" android:layout_width="1.0dip" android:layout_height="-1" android:layout_margin="2.0dip" />
            <ListView android:id="@id/list_permissions" android:layout_width="-1" android:layout_height="-2" android:layout_marginLeft="10.0dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>